# daily-salary-bot

./: Cargo.toml
migrations/: V1__init.sql  V2__alter_job.sql
src/: main.rs  scheduler.rs  storage.rs  telegram_api.rs
