[package]
name = "salary-bot"
version = "0.1.0"
authors = ["dan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["std"] }
tokio-postgres = "0.7.1"
postgres-types = "0.2.1"
refinery = {version = "0.5.0", features = ["tokio-postgres"]}
mockall = "0.9.1"